Correct mobile header spacing; prettify css file
Spacing wasn't quite right in mobile header. Put all properties in each selector in alphabetic order for easy locating.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,99 +6,15 @@ html {
 }
 
 body {
-    margin: 0 auto;
-    width: 100%;
     height: auto;
+    margin: 0 auto;
     max-width: 960px;
+    width: 100%;
 }
 
 .mobile-only {
     display: none;
 }
-
-/* HEADER */
-header {
-    height: 64px;
-    margin: 0 24px;
-}
-header {
-    padding: 0 24px;
-
-}
-
-.header-wrapper .desktop-only {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/* school name and logo */
-.school {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.schoolName {
-/*    height: 2rem; */
-    line-height: 2rem;
-}
-
-.schoolNameBold {
-    font-weight: bold;
-}
-.schoolNameLight {
-    color: #9B9B9B;
-    font-weight: 300;
-}
-
-/* navigation */
-.menu {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    height: 64px;
-}
-
-.menu ul {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-}
-
-.menu ul li {
-    padding: 0 8px;
-    flex: 1 0 auto;
-}
-
-.menu ul li:first-child {
-    padding-left: 0px;
-}
-
-/* nav menu spacing in jeopardy; dump menu item css */
-@media only screen and (max-width: 673px) {
-    li.lg-desktop-only {
-        display: none;
-    }
-} /* mobile css */
-
-.menu ul li a, 
-.menu ul li img {
-    display: block;
-    text-decoration: none;
-    color: black;
-    padding: 10px;
-}
-
-.menu ul li a:hover{
-    background-color: lightgray;
-}
-
-
-/* footer */
-
 
 /* mobile specific css */
 @media only screen and (max-width: 450px) {
@@ -107,6 +23,105 @@ header {
     }
     
     .mobile-only {
-        display: block;
+        display: flex;
     }
 } /* mobile css */
+
+/* HEADER */
+header {
+    height: 64px;
+    margin: 0 24px;
+}
+
+.header-wrapper .desktop-only {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-wrapper .mobile-only {
+    justify-content:center;
+}
+
+/* school name and logo */
+.school {
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.school a {
+    text-decoration: none;
+}
+
+.schoolName {
+    line-height: 2rem;
+}
+
+.schoolNameBold {
+    font-weight: bold;
+    color: black;
+}
+
+.schoolNameLight {
+    color: #9B9B9B;
+    font-weight: 300;
+}
+
+/* navigation */
+.menu {
+    align-items: center;
+    display: flex;
+    height: 64px;
+    justify-content: flex-end;
+}
+
+.menu ul {
+    align-items: center;
+    display: flex;
+    flex-wrap: nowrap;
+    list-style-type: none;
+    padding: 0;
+}
+
+.menu ul li {
+    flex: 1 0 auto;
+    padding: 0 8px;
+}
+
+.menu ul li:first-child {
+    padding-left: 0px;
+}
+
+/* mobile specific css */
+@media only screen and (max-width: 450px) {
+    .menu ul li:first-child {
+        margin-left: 24px;
+    }
+    
+    .menu ul li:last-child {
+        margin-right: 24px;
+    }
+}
+
+/* nav menu spacing in jeopardy; dump menu item css */
+@media only screen and (max-width: 673px) {
+    li.lg-desktop-only {
+        display: none;
+    }
+} /* tablet css */
+
+.menu ul li a, 
+.menu ul li img {
+    color: black;
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+}
+
+.menu ul li a:hover{
+    background-color: lightgray;
+}
+
+/* footer */
+
